--- a/nav.html
+++ b/nav.html
@@ -12,7 +12,15 @@
     <nav>
         <a class="logo" href="index.html">Centre de Congrès</a>
         <ul class="nav-links">
-            <li><a href="#">Nos Salles</a></li>
+            <li>
+                <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
+                <ul class="submenu">
+                    <li><a href="pages/amphitheatre.html">Amphithéâtre</a></li>
+                    <li><a href="pages/EspaceNumerique.html">Espace numérique</a></li>
+                    <li><a href="pages/SalleDeReception">Salle de réception</a></li>
+                    <li><a href="pages/SalleDeReunion">Salle de réunion</a></li>
+                </ul>
+            </li>
             <li><a href="#">Réserver</a></li>
             <li><a href="#">Nous contacter</a></li>
         </ul>
