--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
       </footer>
       <script src="scripts/nav.js"></script>
       <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <script src="scripts/main.js"></script>
       <script>
        AOS.init();
       </script>
